Added logging in & signing up. Added checks in all account methods for logged in status. Still to be done: redo all tests (;-;), do admin checks for AdminController. Fix handlebar files that have not been redone (i.e. convert new html into hbs). Double check transaction history because I think its bugged (again)

--- a/src/main/resources/views/account/dashboard.hbs
+++ b/src/main/resources/views/account/dashboard.hbs
@@ -13,10 +13,10 @@
         </div>
 
         <nav class="navbar">
-            <a class="active" href="/accounts/dashboard?uuid={{account.uuid}}">Home</a>
-            <a href="/accounts/details?uuid={{account.uuid}}">Account Details</a>
-            <a href="/accounts/transactions?uuid={{account.uuid}}">Transaction Details</a>
-            <a href="/accounts/summary?uuid={{account.uuid}}">Account Summary</a>
+            <a class="active" href="/account/dashboard">Home</a>
+            <a href="/account/details">Account Details</a>
+            <a href="/account/transactions">Transaction Details</a>
+            <a href="/account/summary">Account Summary</a>
         </nav>
 
         <section class="overview">
@@ -54,7 +54,7 @@
                     </tbody>
                 </table>
 
-                <a href="/accounts/transactions?uuid={{account.uuid}}">View More</a>
+                <a href="/account/transactions">View More</a>
             </div>
 
             <div class="outgoing">
@@ -84,7 +84,7 @@
                     </tbody>
                 </table>
 
-                <a href="/accounts/transactions?uuid={{account.uuid}}">View More</a>
+                <a href="/account/transactions">View More</a>
             </div>
         </section>
     </body>
