--- a/src/main/resources/views/account/transactions.hbs
+++ b/src/main/resources/views/account/transactions.hbs
@@ -12,10 +12,10 @@
         </div>
 
         <nav class="navbar">
-            <a href="/accounts/dashboard?uuid={{account.uuid}}">Home</a>
-            <a href="/accounts/details?uuid={{account.uuid}}">Account Details</a>
-            <a class="active" href="/accounts/transactions?uuid={{account.uuid}}">Transaction Details</a>
-            <a href="/accounts/summary?uuid={{account.uuid}}">Account Summary</a>
+            <a href="/account/dashboard">Home</a>
+            <a href="/account/details">Account Details</a>
+            <a class="active" href="/account/transactions">Transaction Details</a>
+            <a href="/account/summary">Account Summary</a>
         </nav>
 
         <section class="trans-overview">
