--- a/src/main/resources/assets/static/css/auth/login.css
+++ b/src/main/resources/assets/static/css/auth/login.css
@@ -40,6 +40,27 @@ h1 {
     margin-bottom: 20px;
 }
 
+/* Sign Up Success */
+
+.success {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 80px;
+    margin: 0 80px 0 80px;
+    border: 3px solid #56ae57;
+}
+
+.success-header {
+    padding-bottom: 10px;
+    margin: 0;
+}
+
+.success-message {
+    font-weight: bold;
+    margin: 0;
+}
+
 /* Error Box */
 
 .error {
@@ -48,8 +69,7 @@ h1 {
     justify-content: center;
     height: 80px;
     margin: 0 80px 0 80px;
-
-    border: 2px solid #ff0033;
+    border: 3px solid #ff0033;
 }
 
 .error-header {
@@ -106,7 +126,7 @@ input {
 /* Sign Up Option */
 
 .no-account {
-    margin-top: 40px;
+    margin-top: 30px;
     font-size: 16px;
     color: #333;
 }
