--- a/src/main/resources/views/account/dashboard.hbs
+++ b/src/main/resources/views/account/dashboard.hbs
@@ -3,42 +3,39 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Account Details</title>
+        <title>Dashboard</title>
         <link rel="stylesheet" href="../assets/static/css/account/dashboard.css">
     </head>
-
     <body>
         <div class="header">
-            <h1>Single Account View</h1>
+            <h1>Account Dashboard</h1>
         </div>
 
         <nav class="navbar">
             <a class="active" href="/account/dashboard">Home</a>
-            <a href="/account/details">Account Details</a>
-            <a href="/account/transactions">Transaction Details</a>
+            <a href="/account/transactions">Transactions</a>
             <a href="/account/summary">Account Summary</a>
+            <a href="/account/settings">Settings</a>
         </nav>
 
-        <section class="overview">
+        <section class="acc-overview">
             <h2>Account Overview</h2>
 
             <p><b>Account Holder: </b>{{account.name}}</p>
             <p><b>Account ID: </b>{{account.uuid}}</p>
-            <p><b>Account Type: </b>Current Account</p>
             <p><b>Current Balance: </b>£{{account.bal}}</p>
         </section>
 
-        <section class="table-container">
-            <div class="income">
+        <section class="tables-container">
+            <div class="transactions">
                 <h2>Income</h2>
 
                 <table>
                     <thead>
                         <tr>
                             <th>Date</th>
-                            <th>Sender</th>
+                            <th>Description</th>
                             <th>Amount</th>
-                            <th>Action</th>
                         </tr>
                     </thead>
 
@@ -48,7 +45,6 @@
                             <td>{{timestamp}}</td>
                             <td>{{sender}}</td>
                             <td>+ £{{amount}}</td>
-                            <td><button class="view-btn">View</button></td>
                         </tr>
                     {{/each}}
                     </tbody>
@@ -57,7 +53,7 @@
                 <a href="/account/transactions">View More</a>
             </div>
 
-            <div class="outgoing">
+            <div class="transactions">
                 <h2>Outgoings</h2>
 
                 <table>
@@ -66,8 +62,6 @@
                             <th>Date</th>
                             <th>Recipient</th>
                             <th>Amount</th>
-                            <th>Processed</th>
-                            <th>Action</th>
                         </tr>
                     </thead>
 
@@ -77,8 +71,6 @@
                             <td>{{timestamp}}</td>
                             <td>{{recipient}}</td>
                             <td>- £{{amount}}</td>
-                            <td>{{processed}}</td>
-                            <td><button class="view-btn">View</button></td>
                         </tr>
                     {{/each}}
                     </tbody>
