Final commit - Added settings page & logout functionality to admin

--- a/src/main/resources/views/admin/dashboard.hbs
+++ b/src/main/resources/views/admin/dashboard.hbs
@@ -14,6 +14,7 @@
             <a class="active" href="/admin/dashboard">Home</a>
             <a href="/admin/business-report">Business Report</a>
             <a href="/admin/big-spenders">Big Spenders</a>
+            <a href="/admin/settings">Settings</a>
         </nav>
 
         <main class="accounts">
