Final final commit - Added a tag in admin account view

--- a/src/main/resources/views/admin/account.hbs
+++ b/src/main/resources/views/admin/account.hbs
@@ -16,6 +16,7 @@
             <a href="/admin/dashboard">Home</a>
             <a href="/admin/business-report">Business Report</a>
             <a href="/admin/big-spenders">Big Spenders</a>
+            <a href="/admin/settings">Settings</a>
         </nav>
 
         <section class="overview">
